# neutral-detection-agents-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  redis.conf
data/: source_list.json
scripts/: check_chroma_data.py  entrypoint.sh  import_mbfc_data.py
src/: app.py  config.py
src/agents/: __init__.py  base.py  claim_decomposition.py  credibility.py  ensemble_decision.py  evidence_retrieval.py  passage_isolation.py  query_generation.py  verification.py
src/models/: __init__.py  claim.py  evidence.py  report.py
src/services/: __init__.py  chroma_store.py  mbfc_registry.py  redis_cache.py  web_scraper.py  web_search.py
src/utils/: __init__.py  domain_parser.py  logger.py
src/workflow/: graph.py  state.py
tests/unit/: test_domain_parser.py  test_mbfc_registry.py
